--- a/client/src/styles/UserProfilePage.css
+++ b/client/src/styles/UserProfilePage.css
@@ -1,3 +1,14 @@
-h1 {
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+html, h1 {
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 900;
+}
+
+.table {
+  width:80%; 
+  margin-left:15%; 
+  margin-right:15%;
   text-align: center;
 }
