--- a/client/src/styles/calendar.css
+++ b/client/src/styles/calendar.css
@@ -2,6 +2,20 @@
   box-sizing: border-box;
 }
 
+.datePicker {
+  /* border: 4px solid rgb(70, 34, 230); */
+  margin: auto;
+  text-align: -webkit-center;
+}
+
+.bookingSummary {
+  border: 4px solid rgb(11, 201, 11);
+  text-align: center;
+  width: 300px;
+  margin: auto;
+  padding: 10px;
+}
+
 .date-range {
   display: flex;
   justify-content: space-between;
@@ -22,7 +36,7 @@
   border-right: 2px solid #d3dde6;
   border-top: 2px solid #d3dde6;
   box-sizing: border-box;
-  content: "";
+  content: '';
   display: block;
   height: 18px;
   left: 50%;
@@ -35,7 +49,7 @@
 }
 
 input {
-  padding: 20p  
+  padding: 20p;
 }
 
 .nice-dates-popover:not(.-open) {
@@ -53,11 +67,11 @@ input {
   position: absolute;
   transform-origin: top;
   transform: perspective(1000px);
-  transition-property: transform,opacity;
-  transition-duration: .4s;
-  transition-timing-function: cubic-bezier(.4,.2,0,1.1);
+  transition-property: transform, opacity;
+  transition-duration: 0.4s;
+  transition-timing-function: cubic-bezier(0.4, 0.2, 0, 1.1);
   width: 100%;
-  will-change: transform,opacity;
+  will-change: transform, opacity;
   z-index: 9;
 }
 
@@ -99,3 +113,6 @@ input {
   flex-direction: column;
 }
 
+input {
+  text-align: center;
+}
